@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/galib
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/galib/ChangeLog,v 1.7 2007/06/02 13:04:50 angelos Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/galib/ChangeLog,v 1.8 2008/07/07 10:36:21 bicatali Exp $
+
+*galib-2.4.7 (07 Jul 2008)
+
+  07 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org> +galib-2.4.7.ebuild:
+  Version bumped and added doc, examples flags. Closing bug #230978
 
   02 Jun 2007; Christoph Mende <angelos@gentoo.org> galib-2.4.6.ebuild:
   Added ~amd64 for bug 178262
